--- a/programs/cpamm/Cargo.toml
+++ b/programs/cpamm/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "automated-market-maker"
+name = "cpamm"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "automated_market_maker"
+name = "cpamm"
 
 [features]
 default = []
